crates/oxc_angular_compiler/tests/snapshots/integration_test__component_with_inline_styles.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---

import { Component } from '@angular/core';
import * as i0 from '@angular/core';

export class StyledComponent {
static ɵfac = function StyledComponent_Factory(__ngFactoryType__) {
  return new (__ngFactoryType__ || StyledComponent)();
};
static ɵcmp = /*@__PURE__*/ i0.ɵɵdefineComponent({type:StyledComponent,selectors:[["app-styled"]],
    decls:2,vars:0,consts:[[1,"container"]],template:function StyledComponent_Template(rf,
        ctx) {
      if ((rf & 1)) {
        i0.ɵɵdomElementStart(0,"div",0);
        i0.ɵɵtext(1,"Hello");
        i0.ɵɵdomElementEnd();
      }
    },styles:[".container[_ngcontent-%COMP%] { color: red; }"]});
}
(() =>{
  (((typeof ngDevMode === "undefined") || ngDevMode) && i0.ɵsetClassDebugInfo(StyledComponent,
      {className:"StyledComponent",filePath:"styled.component.ts",lineNumber:1}));
})();
