crates/oxc_angular_compiler/tests/snapshots/integration_test__let_inside_for_if_with_component_method_call.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
assertion_line: 576
expression: js
---
function TestComponent_For_1_Conditional_1_Conditional_4_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
  if ((rf & 2)) {
    i0.ɵɵnextContext();
    const b_r1 = i0.ɵɵreadContextLet(2);
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(b_r1);
  }
}
function TestComponent_For_1_Conditional_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵtext(1," ");
    i0.ɵɵdeclareLet(2);
    i0.ɵɵtext(3," ");
    i0.ɵɵconditionalCreate(4,TestComponent_For_1_Conditional_1_Conditional_4_Template,
        4,1);
  }
  if ((rf & 2)) {
    const item_r2 = i0.ɵɵnextContext().$implicit;
    const ctx_r2 = i0.ɵɵnextContext();
    const a_r4 = ctx_r2.computeA(item_r2.id);
    i0.ɵɵadvance(2);
    i0.ɵɵstoreLet(ctx_r2.computeB(item_r2.text));
    i0.ɵɵadvance(2);
    i0.ɵɵconditional(((a_r4 > 0)? 4: -1));
  }
}
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵconditionalCreate(1,TestComponent_For_1_Conditional_1_Template,5,2);
  }
  if ((rf & 2)) {
    const ctx_r2 = i0.ɵɵnextContext();
    i0.ɵɵadvance();
    i0.ɵɵconditional((ctx_r2.showDetail()? 1: -1));
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,2,1,null,null,i0.ɵɵrepeaterTrackByIdentity); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.items); }
}
